# nvim-bindgen

./: .clangd  .gitignore  .gitmodules  .stylua.toml  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
crates/codegen/: Cargo.toml  wrapper.h
crates/codegen/src/: cdoc_parser.rs
crates/nvim-bindgen/: test-comment.txt
crates/nvim-bindgen/src/: lib.rs  ref_write.rs
crates/nvim-sys/: Cargo.toml  build.rs
crates/nvim-sys/src/: lib.rs
