[workspace]
members = ["./crates/*"]
exclude = ["./vendor/rust-bindgen"]
resolver = "3"
package.repository = "https://github.com/titaniumtraveler/nvim-codegen"
package.license = "MIT OR Apache-2.0"
package.edition = "2024"

[workspace.dependencies]
libc = "0.2.178"
serde_json = "1.0.145"
winnow.version = "0.7.14"

bindgen.path = "./vendor/rust-bindgen/bindgen"
nvim-codegen.path = "./crates/codegen"
